refactor: jwt middleware logic modification
