# apis/controller/k8s/ingress/ingress.go
@@ -17,7 +17,7 @@ import (
 //	@produce		json
 //	@param			ingressName		path	string					true	"ingress名称"
 //	@param			namespace		path	string					true	"Namespace"
-//	@Param			x-token			header	string					true	"Authorization token"
+//	@Param			Authorization			header	string					true	"Authorization token"
 //	@success		200				object	httputil.ResponseBody	"成功返回 Ingress 信息"
 //	@router			/api/v1/k8s/ingress/{namespace}/{ingressName} [get]
 func GetIngressByName(c *gin.Context) {
@@ -45,7 +45,7 @@ func GetIngressByName(c *gin.Context) {
 //	@summary		获取 Ingress 列表
 //	@produce		json
 //	@param			namespace	path	string						false	"Namespace 不填为全部"
-//	@Param			x-token		header	string						true	"Authorization token"
+//	@Param			Authorization		header	string						true	"Authorization token"
 //	@Param			filter		query	string						false	"根据 Ingress 名字模糊查询"
 //	@Param			limit		query	string						false	"一页获取多少条数据,默认十条"
 //	@Param			page		query	string						false	"获取第几页的数据,默认第一页"
@@ -81,7 +81,7 @@ func GetIngressList(c *gin.Context) {
 //	@summary		创建简单 Ingress
 //	@produce		json
 //	@produce		json
-//	@Param			x-token	header	string						true	"Authorization token"
+//	@Param			Authorization	header	string						true	"Authorization token"
 //	@param			data	body	dto.K8sIngressSimpleCreate	true	"K8sIngressSimpleCreate 对象"
 //	@success		200		object	httputil.ResponseBody	"成功返回"
 //	@router			/api/v1/k8s/ingress/ [post]
@@ -112,7 +112,7 @@ func CreateSimpleIngress(c *gin.Context) {
 //	@summary		更新简单 Ingress
 //	@produce		json
 //	@produce		json
-//	@Param			x-token	header	string						true	"Authorization token"
+//	@Param			Authorization	header	string						true	"Authorization token"
 //	@param			data	body	dto.K8sIngressSimpleCreate	true	"K8sIngressSimpleCreate 对象"
 //	@success		200		object	httputil.ResponseBody	"成功返回"
 //	@router			/api/v1/k8s/ingress/ [put]
@@ -144,7 +144,7 @@ func UpdateSimpleIngress(c *gin.Context) {
 //	@produce		json
 //	@param			ingressName		path	string	true	"Ingress名称"
 //	@param			namespace	path	string	true	"Namespace"
-//	@Param			x-token		header	string	true	"Authorization token"
+//	@Param			Authorization		header	string	true	"Authorization token"
 //	@success		200			object	nil		"成功返回"
 //	@router			/api/v1/k8s/ingress/{namespace}/{ingressName} [delete]
 func DeleteIngressByName(c *gin.Context) {
